<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KotlinDemo</string>

    <string name="negotiable">面议</string>
    <string name="recommend_similar_jobs">为你推荐相似好职位</string>
    <string name="next">下一个</string>
    <string name="please_select_job">请选择职位</string>
    <string name="delivery_job">投递%s个职位dd</string>
    <string name="title_content">[] Mark: ThePeople测试成都市哈哈哈这是不适合觉得亟待解决的卡卡卡壳不是对你的狄安娜看卡卡吧卡卡卡看看卡卡卡卡卡会不会复活后哈哈哈哈哈哈不是合适哦了是v年历史</string>
    <string name="title_content_expand">Please Mark: The people people people people The people people people people.</string>
    <string name="title_submit">Submit</string>
    <string name="title_skip">Skip</string>
    <string name="title_unmarked">6 unmarked</string>
    <string name="title_test">Includes APIs for testing your Android app, including Espresso, JUnit Runner, JUnit4 rules, and UI Automator.have less code, powerful tools, and intuitive Kotlin APIs.</string>
    <string name="title_test2">安卓提供各种尖端工具和功能可帮助您针对数十亿用户日常使用的手机平板电脑电视和汽车来构建应用</string>
    <string name="long_text_en" tools:ignore="MissingTranslation">\t\t\t\tAs you know, this website is not only about living a long, healthy life but also about doing something with it. And this new research is great news if you\'re looking to make a difference. Creating and contributing to the world is not only a foundational piece of living a healthy and happy life, but also a meaningful one.\n \t\t\t\tYou can\'t control the amount of time you spend on this planet, but you can control what you contribute while you\'re here. These contributions don\'t have to be major endeavors. Cook a meal instead of buying one. Play a game instead of watching one. Write a paragraph instead of reading one. You don\'t have to create big contributions, you just need to live out small ones each day.\n \t\t\t\tToo often we spend our lives visiting the world instead of shaping it. Be an adventurer, an inventor, an entrepreneur, an artist. Suggest your own ideas instead of reacting to everyone else\'s. Be an active participant in life and contribute to the world around you. Make good conversation. Make good art. Make good adventure. But above all, make something. Contributing and creating doesn\'t just make you feel alive, it keeps you alive.As you know, this website is not only about living a long, healthy life but also about doing something with it. And this new research is great news if you\'re looking to make a difference. Creating and contributing to the world is not only a foundational piece of living a healthy and happy life, but also a meaningful one.\n \t\t\t\tYou can\'t control the amount of time you spend on this planet, but you can control what you contribute while you\'re here. These contributions don\'t have to be major endeavors. Cook a meal instead of buying one. Play a game instead of watching one. Write a paragraph instead of reading one. You don\'t have to create big contributions, you just need to live out small ones each day.\n \t\t\t\tToo often we spend our lives visiting the world instead of shaping it. Be an adventurer, an inventor, an entrepreneur, an artist. Suggest your own ideas instead of reacting to everyone else\'s.
    </string>
    <string name="the_end">THE END</string>
    <string name="the_end_sub">Footer 布局用于兼容特殊场景交互问题，高度须 match_parent。可重写 config 的 getFooterLayout 方法来替换自定义布局。</string>

    <string name="first_free_chat">首次打招呼 即得一次免费聊</string>
    <string name="activity_rule">活动规则</string>

    <string name="home_key_word_title">以下是您为该职位添加的关键词</string>
    <string name="home_key_word_content">修改后，可重新匹配相关人才</string>
    <string name="home_key_word_edit">去修改</string>

    <string name="position_negative_feedback_title">选择不满意原因，为你优化推荐结果</string>
    <string name="position_negative_feedback__gray_tip">如该职位涉嫌违法、欺诈，请</string>
    <string name="position_negative_feedback__blue_tip"> 立即举报</string>
    <string name="submit">确定</string>
    <string name="other_reason">其他原因</string>
    <string name="mine_setting">我的设置</string>

    <string name="choose_tag_recommend">选择标签，为你推荐</string>
    <string name="choose_tag_recommend_no_fold">找"保洁"的人也在看</string>
    <string name="job_type">职位类别</string>
    <string name="salary_range">薪资范围</string>
    <string name="city">城市</string>
    <string name="recommend_by_your_selected">已根据你选择的标签推荐</string>
    <string name="modify">修改</string>
    <string name="is_loading">正在加载…</string>
    <string name="collapse">收起</string>
    <string name="change_tag_retry">换个标签试试吧</string>
    <string name="history_search">历史搜索</string>
    <string name="job_recommend">职位推荐</string>
    <string name="expand_all">展开全部</string>
    <string name="subscribed"> · 已订阅</string>
    <string name="unsubscribe_and_clear_all">确定取消订阅并删除全部历史记录吗？</string>
    <string name="clear_all">确定删除全部历史记录吗？</string>
    <string name="unsubscribe_and_clear">确定取消订阅并删除记录吗？</string>

    <string name="job_desc">职位描述</string>
    <string name="bonus_performance">奖金绩效</string>
    <string name="working_time">工作/休息时间</string>
    <string name="job_blessing">职位福利</string>
    <string name="recommend_reason">推荐理由:</string>

    <string name="ai_recommend_title">专属高匹配职位</string>
    <string name="ai_recommend_greet">打招呼</string>
    <string name="no_interest">不感兴趣</string>
    <string name="slide_find_job">上滑发现更多好职位</string>
    <string name="feedback_suggest">反馈建议</string>
    <string name="user_protocol">用户协议</string>
    <string name="sure">确定</string>

    <string name="what_is_cur_interview">什么是当天面职位？</string>
    <string name="i_get_it">我知道了</string>

    <string name="online">在线</string>
    <string name="not_suite">不合适</string>
    <string name="collect">收藏</string>
    <string name="call">打电话</string>
    <string name="continue_chat">继续沟通</string>
    <string name="cancel_not_suite">撤销不合适</string>
    <string name="next_step">下一步</string>
    <string name="customize">自定义</string>
    <string name="expand_more">展开更多</string>
    <string name="multi_select">（多选）</string>

    <string name="please_input_bind_phone_number">请输入已绑定的手机号</string>
    <string name="call_custom_service_find">如忘记手机号，可联系客服找回</string>
    <string name="please_input_phone_number">请输入手机号</string>

    <string name="all_selected">全选</string>
    <string name="online_resume_has_send">在线简历已发送</string>
    <string name="you_maybe_like">你可能还喜欢</string>
    <string name="no_similar_job_recommend">暂无相似职位推荐</string>

    <string name="more">More</string>

    <string name="nps_init_title">你对本次推荐体验满意么</string>
    <string name="nps_top_title">你对本次推荐体验是否满意请评价</string>
    <string name="i_have_some_to_say">我还有话要说</string>
    <string name="lose_part">让你觉得不满意或者失望的点都有什么</string>

    <string name="content_recommend_detail_title">内容算法说明</string>
    <string name="content_recommend_detail_body">内容推荐算法是以用户的属性信息、行为信息，以及内容库中的内容属性信息为基础，采用深度学习等机器学习策略，通过召回，排序，过滤，加权等流程，最终为您推荐更加便捷、更加符合您个性化需求的内容及服务信息，有助于提升您的浏览体验。\n\n内容推荐算法主要分为召回和排序两个主要流程：\n· 在召回阶段，我们可能会使用到以下必要的信息∶您操作、使用的行为信息（包括点击，点赞，收藏，评论等），以及将您在智联账号下使用某项服务中提供的信息（包括性别，职位，行业，薪资水平，教育水平，专业，求职意向状态，省份，城市，期望的岗位等）进行综合统计、分析以提取您的偏好特征，用来向您推荐或展示您可能感兴趣的内容及服务信息。\n· 在排序阶段，排序模型从召回阶段召回的内容中，根据您和内容的属性信息，召回阶段对内容的相关性打分，推荐结果的多样性以及推荐内容的热门程度等因素，返回召回结果中内容的点击率预期值，从而对召回内容进行排序，并返回推荐结果。\n\n若您不想看到为您推荐的内容及服务等信息，您可以在智联招聘APP端"我的-隐私中心-个性化推荐设置-个性化内容推荐”中点击相应按钮进行关闭，关闭后将会影响客户端（主要为职Q首页内容feed）的默认推荐内容。您可以自主决定开启或关闭，这有助于您对推荐内容的控制及自主决策。</string>

</resources>
