<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="20dp"
    android:paddingBottom="14dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="12dp"
        android:textColor="@color/C_B1"
        style="@style/style_text_bold_16"
        tools:text="@string/other_reason"/>

    <FrameLayout
        android:id="@+id/fl_edit_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/position_negative_feedback_edit"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_text_normal_13"
            android:textColor="#9399AD"
            android:text="@string/position_negative_feedback__gray_tip"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_text_normal_13"
            android:textColor="@color/C_P1"
            android:text="@string/position_negative_feedback__blue_tip"
            android:drawablePadding="2dp"
            app:drawableEndCompat="@drawable/icon_arrow_blue" />

    </LinearLayout>

</LinearLayout>