<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:paddingHorizontal="20dp"
    android:background="@color/C_W1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 普通状态 -->    
    <LinearLayout
        android:id="@+id/ll_normal_state"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_not_suite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_not_suite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/C_B1"
                android:text="@string/not_suite"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_collect"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_resume_no_collect"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/C_B1"
                android:text="@string/collect"/>

        </LinearLayout>

        <com.zhaopin.common.widget.RCLinearLayout
            android:id="@+id/ll_call"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@color/C_P7"
            app:layout_radius="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/C_P1"
                style="@style/style_text_bold_16"
                android:text="@string/call"/>

        </com.zhaopin.common.widget.RCLinearLayout>

        <com.zhaopin.common.widget.RCLinearLayout
            android:id="@+id/ll_greet_or_chat"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/C_P1"
            app:layout_radius="22dp">

            <TextView
                android:id="@+id/tv_greet_or_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/C_W1"
                style="@style/style_text_bold_16"
                android:text="@string/continue_chat"/>

        </com.zhaopin.common.widget.RCLinearLayout>

    </LinearLayout>
    
    <com.zhaopin.common.widget.RCLinearLayout
        android:id="@+id/ll_cancel_not_suite"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:background="@color/C_P7"
        android:visibility="gone"
        app:layout_radius="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_text_bold_16"
            android:textColor="@color/C_P1"
            android:text="@string/cancel_not_suite"/>

    </com.zhaopin.common.widget.RCLinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>