<?xml version="1.0" encoding="utf-8"?>
<com.zhaopin.common.widget.RCLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:paddingTop="24dp"
    android:paddingBottom="28dp"
    android:paddingHorizontal="12dp"
    android:orientation="vertical"
    android:background="@color/C_W1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource"
    app:layout_radius="10dp">

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/job_detail_desc_title_bg"
            android:layout_marginBottom="-2dp"
            android:layout_gravity="bottom"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_text_bold_18"
            android:textColor="@color/C_B1"
            android:text="@string/job_desc" />

    </FrameLayout>

    <com.zhaopin.common.widget.flowLayout.origin.TagFlowLayoutOrigin
        android:id="@+id/layout_flow_skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:max_lines="3" />

    <com.example.kotlindemo.task.jobdetail.FoldJobTextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="48dp"
        android:textColor="@color/C_B2"
        android:lineSpacingExtra="3dp"
        android:textSize="15sp"
        app:showMaxHeight="402dp"
        app:showTip="true"
        app:tipColor="@color/C_B4"
        app:tipGravity="1"
        app:tipClickable="true"
        app:foldText="展开全部"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_text_bold_16"
        android:textColor="@color/C_B1"
        android:text="@string/bonus_performance"/>

    <TextView
        android:id="@+id/tv_bonus_performance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="3dp"
        android:textSize="15sp"
        android:textColor="@color/C_B2"
        tools:text="公司奖惩制度完善，每年根据业绩及贡献值进行奖励。"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            style="@style/style_text_bold_16"
            android:textColor="@color/C_B1"
            android:text="@string/working_time" />

        <ImageView
            android:id="@+id/iv_warning"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_job_detail_warning"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_working_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="4dp"
        tools:text="· 上午08:30-下午05:30 \n· 周末双休"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/style_text_bold_16"
        android:textColor="@color/C_B1"
        android:text="@string/job_blessing"/>

    <com.zhaopin.common.widget.flowLayout.origin.TagFlowLayoutOrigin
        android:id="@+id/layout_flow_bless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:max_lines="3" />

</com.zhaopin.common.widget.RCLinearLayout>